--- a/templates/users.html
+++ b/templates/users.html
@@ -7,7 +7,7 @@
     <h1>Users</h1>
     <ul>
         {% for user in users %}
-        <li><a href="{{ url_for('users_movies', user_id=user['id']) }}">{{ user['name'] }}</a></li>
+        <li><a href="{{ url_for('user_movies', user_id=user['id']) }}">{{ user['name'] }}</a></li>
         {% endfor %}
     </ul>
 </body>
